language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_function_argument_label_in_other_module.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import wibble

pub fn main() {
  wibble.replace(in: "hello", each: "l")
                 ↑                      
}

----- Jumped to `src/wibble.gleam`
pub fn replace(in string: String, each pattern: String) -> String {
               ↑▔                                                  
  todo
}
