language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_import_aliased.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import example_module as example
                          ↑     
fn main() {
  example.my_num
}

----- Jumped to `src/example_module.gleam`
pub const my_num = 1
↑
