language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_import_unqualified_type.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import example_module.{type MyType}
                              ↑    
fn main() -> MyType {
  0
}

----- Jumped to `src/example_module.gleam`
pub type MyType = Int
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
