language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_imported_constant.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import wibble

const my_constant = wibble.value
                           ↑    

----- Jumped to `build/packages/hex/src/wibble.gleam`
pub const value = 10
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
