language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_imported_type_alias_unqualified_in_annotation.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import wibble

pub fn main() {
  let _: wibble.Wibble = #(1, "Test")
                ↑                    
}

----- Jumped to `src/wibble.gleam`
pub type Wibble = #(Int, String)
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
