language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_local_type_alias_in_annotation.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type Wibble = #(Int, String)

pub fn main() {
  let _: Wibble = #(1, "Wobble")
         ↑                      
}

----- Jumped to `src/app.gleam`

type Wibble = #(Int, String)
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
  let _: Wibble = #(1, "Wobble")
}
