language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_local_variable.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub fn main() {
  let x = 1
  x
  ↑
}

----- Jumped to `src/app.gleam`

pub fn main() {
  let x = 1
      ↑    
  x
}
