language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_module.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import wibble

pub fn main() {
  wibble.wibble()
   ↑             
}

----- Jumped to `src/wibble.gleam`
pub fn wibble() {}
↑
